# den

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vercel.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-effect.yml
.github/workflows/: ci.yml
crates/den-core/: Cargo.toml
crates/den-core/src/: alloc_shim.rs  lib.rs
crates/den-core/src/effects/: gain.rs  mod.rs  passthrough.rs
crates/reference/: Cargo.toml
crates/reference/src/: main.rs
e2e/: worklet-smoke.spec.ts
scripts/: gen-effect.mjs  gen-effect.test.mjs  smoke.mjs  vercel-build.sh  vercel-install.sh
scripts/gen-golden/: README.md  effects.py  gen.py  pyproject.toml  signals.py
