[workspace]
resolver = "2"
members = ["crates/den-core", "crates/reference"]

[workspace.package]
edition = "2024"
rust-version = "1.85" # Rust 2024 edition stabilized in 1.85 (Feb 2025)
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuichkun/den"
authors = ["den contributors"]

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

# Dedicated profile for WASM artifact: minimize size first, wasm-opt restores speed.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "symbols"
panic = "abort"
